Improve forceTitlesDisplay UI

--- a/ahbottomnavigation/src/main/res/values/dimens.xml
+++ b/ahbottomnavigation/src/main/res/values/dimens.xml
@@ -16,6 +16,9 @@
     <dimen name="bottom_navigation_text_size_active">14sp</dimen>
     <dimen name="bottom_navigation_text_size_inactive">12sp</dimen>
 
+    <dimen name="bottom_navigation_text_size_forced_active">11sp</dimen>
+    <dimen name="bottom_navigation_text_size_forced_inactive">10sp</dimen>
+
     <!-- Small -->
     <dimen name="bottom_navigation_small_active_min_width">96dp</dimen>
     <dimen name="bottom_navigation_small_active_max_width">168dp</dimen>
