--- a/ahbottomnavigation/src/main/res/values/dimens.xml
+++ b/ahbottomnavigation/src/main/res/values/dimens.xml
@@ -7,9 +7,9 @@
     <dimen name="bottom_navigation_height">56dp</dimen>
     <dimen name="bottom_navigation_icon">24dp</dimen>
 
-    <dimen name="bottom_navigation_padding_top_active">6dp</dimen>
-    <dimen name="bottom_navigation_padding_top_inactive">8dp</dimen>
-    <dimen name="bottom_navigation_padding_bottom">7dp</dimen>
+    <dimen name="bottom_navigation_margin_top_active">6dp</dimen>
+    <dimen name="bottom_navigation_margin_top_inactive">8dp</dimen>
+    <dimen name="bottom_navigation_margin_bottom">7dp</dimen>
     <dimen name="bottom_navigation_padding_left">12dp</dimen>
     <dimen name="bottom_navigation_padding_right">12dp</dimen>
 
@@ -25,10 +25,19 @@
     <dimen name="bottom_navigation_small_inactive_min_width">64dp</dimen>
     <dimen name="bottom_navigation_small_inactive_max_width">96dp</dimen>
 
-    <dimen name="bottom_navigation_small_padding_top_active">6dp</dimen>
-    <dimen name="bottom_navigation_small_padding_top">16dp</dimen>
-    <dimen name="bottom_navigation_small_padding_bottom">16dp</dimen>
+    <dimen name="bottom_navigation_small_margin_top_active">6dp</dimen>
+    <dimen name="bottom_navigation_small_margin_top">16dp</dimen>
+    <dimen name="bottom_navigation_small_margin_bottom">16dp</dimen>
 
     <dimen name="bottom_navigation_small_selected_width_difference">10dp</dimen>
+
+
+    <dimen name="bottom_navigation_notification_width">16dp</dimen>
+    <dimen name="bottom_navigation_notification_height">16dp</dimen>
+    <dimen name="bottom_navigation_notification_margin_top">4dp</dimen>
+    <dimen name="bottom_navigation_notification_margin_left">16dp</dimen>
+    <dimen name="bottom_navigation_notification_margin_left_active">26dp</dimen>
+    <dimen name="bottom_navigation_notification_text_size">10sp</dimen>
+    <dimen name="bottom_navigation_notification_text_size_min">8sp</dimen>
 
 </resources>
