--- a/demo/src/main/res/layout/fragment_demo_settings.xml
+++ b/demo/src/main/res/layout/fragment_demo_settings.xml
@@ -45,4 +45,25 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Show bottom navigation"
+            android:textSize="18sp"/>
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/fragment_demo_show_hide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"/>
+
+    </LinearLayout>
+
 </LinearLayout>
