--- a/ahbottomnavigation/src/main/res/layout/bottom_navigation_small_item.xml
+++ b/ahbottomnavigation/src/main/res/layout/bottom_navigation_small_item.xml
@@ -27,7 +27,7 @@
         android:alpha="1"
         android:gravity="center"
         android:lines="1"
-        android:textColor="@color/colorInactive"
+        android:textColor="@color/colorBottomNavigationInactive"
         android:textSize="14sp"
         tools:text="Label One"/>
 
