--- a/ahbottomnavigation/src/main/res/values/colors.xml
+++ b/ahbottomnavigation/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-
-    <color name="colorInactive">#747474</color>
-    <color name="colorActiveSmall">#FFFFFF</color>
-    <color name="colorInactiveSmall">#50FFFFFF</color>
+    <color name="colorBottomNavigationPrimary">#3F51B5</color>
+    <color name="colorBottomNavigationPrimaryDark">#303F9F</color>
+    <color name="colorBottomNavigationAccent">#FF4081</color>
+    <color name="colorBottomNavigationInactive">#747474</color>
+    <color name="colorBottomNavigationActiveSmall">#FFFFFF</color>
+    <color name="colorBottomNavigationInactiveSmall">#50FFFFFF</color>
+    <color name="colorBottomNavigationNotification">#F63D2B</color>
 </resources>
