--- a/ahbottomnavigation/src/main/res/layout/bottom_navigation_small_item.xml
+++ b/ahbottomnavigation/src/main/res/layout/bottom_navigation_small_item.xml
@@ -33,15 +33,19 @@
 
     <TextView
         android:id="@+id/bottom_navigation_notification"
-        android:layout_width="@dimen/bottom_navigation_notification_width"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/bottom_navigation_notification_height"
+        android:minWidth="@dimen/bottom_navigation_notification_width"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="@dimen/bottom_navigation_notification_margin_left"
         android:layout_marginTop="@dimen/bottom_navigation_notification_margin_top"
+        android:paddingLeft="@dimen/bottom_navigation_notification_padding"
+        android:paddingRight="@dimen/bottom_navigation_notification_padding"
         android:alpha="0"
         android:background="@drawable/notification_background"
         android:gravity="center"
         android:textColor="#FFFFFF"
-        android:textSize="@dimen/bottom_navigation_notification_text_size"/>
+        android:textSize="@dimen/bottom_navigation_notification_text_size"
+        android:textStyle="bold"/>
 
 </FrameLayout>
