--- a/ahbottomnavigation/src/main/res/values/dimens.xml
+++ b/ahbottomnavigation/src/main/res/values/dimens.xml
@@ -34,10 +34,11 @@
 
     <dimen name="bottom_navigation_notification_width">16dp</dimen>
     <dimen name="bottom_navigation_notification_height">16dp</dimen>
+    <dimen name="bottom_navigation_notification_radius">8dp</dimen>
+    <dimen name="bottom_navigation_notification_padding">3dp</dimen>
     <dimen name="bottom_navigation_notification_margin_top">4dp</dimen>
     <dimen name="bottom_navigation_notification_margin_left">16dp</dimen>
     <dimen name="bottom_navigation_notification_margin_left_active">26dp</dimen>
     <dimen name="bottom_navigation_notification_text_size">9sp</dimen>
-    <dimen name="bottom_navigation_notification_text_size_min">8sp</dimen>
 
 </resources>
