ahbottomnavigation: use right background resources
Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

--- a/ahbottomnavigation/src/main/res/layout/bottom_navigation_item.xml
+++ b/ahbottomnavigation/src/main/res/layout/bottom_navigation_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bottom_navigation_height"
-    android:background="?selectableItemBackgroundBorderless"
+    android:background="?android:attr/selectableItemBackgroundBorderless"
     android:minWidth="@dimen/bottom_navigation_min_width"
     android:paddingLeft="@dimen/bottom_navigation_padding_left"
     android:paddingRight="@dimen/bottom_navigation_padding_right">
